2018-02-25  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/viewDef.spad: Fix index bound

2018-02-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-resolv.boot, src/interp/i-toplev.boot:
	Limit recursion depth when resolving types

2018-02-24  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-funsel.boot: Fix recursion in 'has'

2018-02-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-util.boot, src/interp/category.boot,
	src/interp/clam.boot, src/interp/functor.boot,
	src/interp/g-boot.boot, src/interp/i-map.boot,
	src/interp/macros.lisp, src/interp/msgdb.boot:
	Misc cleanups

2018-02-24  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/stream.spad,
	src/algebra/tree.spad: Fix 'leaf?'

2018-02-21  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/mring.spad: Fix 'construct'

2018-02-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-con.boot, src/interp/br-op2.boot,
	src/interp/daase.lisp: Misc cleanups

2018-02-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad: Implement missing 'qsetfirst!'
	and 'qsetrest!'

2018-02-21  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/fr.spad: Fix 'exquo'

2018-02-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/eigen.spad: Make exports conditional

2018-02-20  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/poly.spad: Remove unused local 'times!'

2018-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op1.boot: Show conditional operations
	in categories

2018-02-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pscat.spad: Remove useless signatures

2018-02-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algcat.spad, src/algebra/attribs.spad,
	src/algebra/catdef.spad, src/algebra/matcat.spad
	src/algebra/naalgc.spad: Add default 'leftRecip' and 'rightRecip'
	src/algebra/Makefile.in: Adjust

2018-02-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
