@@ -7,6 +7,6 @@ extern void handleFile(FILE * htdbFile);
 extern void handleFilePages(char * fname, int pgc, PgInfo * pgv);
 extern void handlePage(FILE * infile, PgInfo * pg);
 extern void splitpage(char * buf, char * * ptitle, char * * pbody);
-extern void untexbuf(register char * s);
+extern void untexbuf(char * s);
 extern void searchPage(char * pgname, char * pgtitle, char * pgbody);
 extern void squirt(char * s, int n);
